styles/layout/header.scss
.header {
  position: sticky;
  top: 0;
  width: 100%;
  z-index: 5;
  background-color: $color-white-transparent;
  backdrop-filter: blur(8px);

  @include media('<phone') {
    backdrop-filter: initial;
    position:unset;
  }

  &__wrapper {
      margin-left: auto;
      margin-right: auto;
      position: relative;
      max-width: $content-width;
      
      @include media('<tablet') {
        max-width: 90rem;
      }
      @include media('<phone') {
        max-width: calc(100% - 10rem);
      }
  }
  

  &__inner {
    display: flex;
    justify-content: space-between;
    padding-top: $spacing-small;
    padding-bottom: $spacing-small;
  }

  &__logo__link {
    @extend %title-18;
    color: $color-black;
   

    @include media('<phone') {
      font-size: 3rem;
    }
  }

  .navigation__list {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: 0 clamp(4rem,1rem + .47vw,1.33rem);
    margin: 0;
    @include media('<phone') {
      display: none;
     }
  
    &__link {
      @extend %title-18;
      color: $color-black;
    
      &:hover {
        color: $color-grey;
        transition: .1s ease;
      } 
    }
  }
}

